Fix gauge overflow

--- a/control-station/src/components/GaugeTag/GaugeTag.module.scss
+++ b/control-station/src/components/GaugeTag/GaugeTag.module.scss
@@ -1,8 +1,9 @@
 @use "../../styles/colors";
 
 .gaugeTagWrapper {
-    display: grid;
-    justify-items: center;
+    position: relative;
+    display: flex;
+    justify-content: center;
     align-items: center;
     background-color: map-get($map: colors.$key-colors, $key: lightskyblue);
     padding: .2rem;
@@ -18,9 +19,11 @@
 }
 
 .gauge {
-    grid-row-start: 1;
-    grid-column-start: 1;
-    font-size: 4.5rem; 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 4.5rem;
+    height: 4.5rem;
     z-index: 1;
-    transform: translateY(-0.8rem);
 }
