--- a/control-station/src/components/GaugeTag/TextData/TextData.module.scss
+++ b/control-station/src/components/GaugeTag/TextData/TextData.module.scss
@@ -1,15 +1,13 @@
 @use '../../../styles/fonts.scss';
 
 .textData {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding-top: 1rem;
 
-    grid-row-start: 1;
-    grid-column-start: 1;
-    font-size: inherit;
     z-index: 2;
     max-width: 80%;
     text-align: center;
